提交部分页面

--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,6 +1,6 @@
 #Mon Sep 11 19:19:39 CST 2017
 JENKINS_TIME=''
-IS_JENKINS=false
+IS_JENKINS=true
 APP_VERSIONCODE=40
 APP_VERSIONAME=2.1.5
 MODIFY_BIT_TEST_BASEAPI_SERVER_URL="http\://modify-token.gnet-mall.net/"
