--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -13,3 +13,4 @@ RELEASE_STORE_FILE=tjun.jks
 RELEASE_STORE_PASSWORD=qq2012
 RELEASE_KEY_ALIAS=prohan
 RELEASE_KEY_PASSWORD=qq2012
+android.enableBuildCache=false
