架构 项目还不能运行

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -162,15 +162,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // Support libraries
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+
+    // Architecture components
+    implementation "android.arch.lifecycle:runtime:$lifecycle_versions"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_versions"
+    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_versions"
+    implementation "android.arch.persistence.room:runtime:$room_versions"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_versions"
 }
 
 //获得时间
