--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,6 +158,10 @@ android {
             }
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
